--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -25,16 +25,17 @@
                 android:id="@+id/load"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
+                android:textSize="30sp"
                 android:textColor="@color/colorPrimary"
-                android:text="Load"
+                android:text="Loading"
                 android:paddingLeft="15dp"
                 android:paddingRight="15dp"
-                android:paddingTop="5dp"
-                android:paddingBottom="5dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
                 android:textStyle="bold"
                 android:typeface="sans"
-                android:background="@android:color/transparent" />
+                android:background="@android:color/transparent"
+                 />
 
         </LinearLayout>
 
@@ -48,13 +49,17 @@
                 android:id="@+id/unload"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="25sp"
+                android:textSize="30sp"
                 android:textColor="@color/colorPrimary"
                 android:text="UnLoad"
                 android:textStyle="bold"
                 android:typeface="sans"
-                android:padding="5dp"
-                android:background="@android:color/transparent" />
+                android:paddingLeft="16dp"
+                android:paddingRight="16dp"
+                android:paddingTop="15dp"
+                android:paddingBottom="15dp"
+                android:background="@android:color/transparent"
+                />
 
         </LinearLayout>
 
