--- a/app/src/main/res/layout/item_dialog.xml
+++ b/app/src/main/res/layout/item_dialog.xml
@@ -41,7 +41,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:background="@color/maroon">
+                    android:background="@color/colorPrimary">
                     <ImageView
                         android:id="@+id/commodity_img"
                         android:layout_width="60dp"
@@ -56,7 +56,18 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:orientation="vertical"
-                    android:paddingLeft="5dp">
+                    android:paddingLeft="10dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="left"
+                        android:text="CGRTYU_NMK"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
+                        android:typeface="serif"
+                        android:textSize="15sp"
+                        android:id="@+id/shipment_id"/>
+
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -65,7 +76,7 @@
                         android:textStyle="bold"
                         android:textColor="@color/black"
                         android:typeface="serif"
-                        android:textSize="15sp"
+                        android:textSize="12sp"
                         android:id="@+id/commodity_name"/>
                     <TextView
                         android:layout_width="match_parent"
@@ -268,7 +279,8 @@
                 android:orientation="vertical"
                 android:background="@color/white"
                 android:paddingBottom="15dp"
-                android:layout_gravity="center">
+                android:layout_gravity="center"
+            android:id="@+id/stop_layout">
 
 
                 <LinearLayout
@@ -287,19 +299,6 @@
                     android:weightSum="1"
                     android:orientation="horizontal">
 
-                    <!--<LinearLayout
-                        android:layout_width="0dp"
-                        android:layout_weight="0.2"
-                        android:layout_height="wrap_content">
-
-                    <ImageView
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center"
-                        android:layout_marginRight="5dp"
-                        android:src="@drawable/ic_loading" />
-
-                    </LinearLayout>-->
 
 
 
