--- a/app/src/main/res/layout/truck_list_grid.xml
+++ b/app/src/main/res/layout/truck_list_grid.xml
@@ -11,7 +11,8 @@
         android:layout_height="wrap_content"
         android:weightSum="1"
         android:background="@color/white"
-        android:paddingBottom="5dp">
+        android:padding="10dp"
+        android:gravity="center">
 
         <LinearLayout
         android:layout_width="0dp"
@@ -21,36 +22,33 @@
             android:background="@color/white">
 
         <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:src="@drawable/ic_truck"
             android:background="@drawable/bg_circle_white"
             android:padding="5dp"
-            android:elevation="5dp"
-            android:translationZ="5dp"/>
+            android:elevation="2dp"
+            android:layout_margin="2dp"
+            />
 
     </LinearLayout>
 
 
 
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_weight="0.7"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+
 
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="0.6"
+                android:layout_weight="0.7"
                 android:gravity="center"
                 android:padding="5dp"
                 android:orientation="horizontal"
                 android:weightSum="1">
                <TextView
                 android:layout_width="0dp"
-                android:layout_weight="0.5"
+                android:layout_weight="0.6"
                 android:layout_height="wrap_content"
                 android:text="CJI35603H"
                 android:gravity="left"
@@ -62,12 +60,12 @@
                <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="0.5"
+                android:layout_weight="0.4"
                 android:orientation="horizontal"
                    android:gravity="right|top">
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:text="HYD"
                     android:gravity="center"
                     android:typeface="serif"
@@ -97,7 +95,7 @@
 
              </LinearLayout>
 
-            <LinearLayout
+           <!-- <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="horizontal"
@@ -120,10 +118,10 @@
                 android:paddingLeft="10dp"/>
             </LinearLayout>
 
+-->
 
 
 
-        </LinearLayout>
 
 
         <LinearLayout
