--- a/app/src/main/res/layout/fragment_list_issues.xml
+++ b/app/src/main/res/layout/fragment_list_issues.xml
@@ -97,7 +97,7 @@
 
     </LinearLayout>
 
-    <LinearLayout
+    <!--<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
@@ -176,14 +176,13 @@
 
     </LinearLayout>
 
-
+-->
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
         android:layout_below="@id/header"
-        android:layout_above="@id/add_issue"
         android:id="@+id/content">
 
 
@@ -543,10 +542,12 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/missing_count"
                 android:text="2000"
+                android:digits="0123456789"
                 android:textSize="50sp"
                 android:layout_gravity="center"
                 android:layout_centerVertical="true"
-                android:layout_centerHorizontal="true" />
+                android:layout_centerHorizontal="true"
+                android:inputType="number"/>
 
 
 
@@ -565,15 +566,16 @@
 
 
         <android.support.design.widget.FloatingActionButton
-            android:id="@+id/change_type"
+            android:id="@+id/add_issue"
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:layout_margin="30dp"
             android:layout_gravity="bottom|right|end"
-            android:src="@drawable/ic_load"
-            android:scaleType="fitCenter"
+            android:src="@drawable/ic_plus"
+            android:scaleType="center"
             app:fabSize="auto"
-            app:backgroundTint="@color/white"
+            app:backgroundTint="@color/colorPrimary"
+
             app:borderWidth="2dp"
             />
 
