--- a/app/src/main/res/layout/fragment_truck_details_1.xml
+++ b/app/src/main/res/layout/fragment_truck_details_1.xml
@@ -260,17 +260,80 @@
         android:layout_marginBottom="5dp"
         android:background="@color/colorPrimary"/>
 
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:weightSum="1">
 
-    <TextView
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="0.2"
+        android:layout_height="wrap_content">
+
+        <ImageButton
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:src="@drawable/ic_search"
+            android:scaleType="fitCenter"
+            android:id="@+id/search_list"
+            android:padding="10dp"
+            android:background="@android:color/transparent"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="0.6"
+        android:layout_height="wrap_content"
+        android:gravity="center">
+
+    <FrameLayout
         android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="ITEMS TO LOAD"
         android:gravity="center"
         android:padding="10dp"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:layout_gravity="center"
         android:textColor="@color/colorPrimary"
         android:id="@+id/title"/>
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:hint="Shipment ID"
+        android:typeface="serif"
+        android:id="@+id/search_text"
+        android:textColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"/>
+
+
+    </FrameLayout>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_weight="0.2"
+        android:layout_height="wrap_content"
+        android:gravity="right">
+    <ImageButton
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/ic_list"
+        android:scaleType="fitCenter"
+        android:id="@+id/review_list"
+        android:padding="10dp"
+        android:background="@android:color/transparent"/>
+    </LinearLayout>
+
+</LinearLayout>
 
 
     <View
